<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>llm2bt_executor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yanchuang1122@gmail.com">celltower1</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>behaviortree_ros2</depend>
  <depend>btcpp_ros2_interfaces</depend>
  <depend>gripper_action_interfaces</depend>
  <depend>plansys2_object_sorting_interfaces</depend>
  <depend>objects_action_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
